--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,9 @@
-name=SoftwareI2c
-version=0.0.3
+name=SoftwareI2C
+version=0.1.6
 author=ADBeta
 maintainer=ADBeta
-sentence=A Software defined I2C Protocol Library.  
-category=Protocol
+sentence=Software I2C communication library
+paragraph=I2C library for devices without hardware I2C ports, or for multiple slave devices with clashing addresses
+category=Protcol Library
 architectures=*
+url=https://github.com/ADBeta/SoftwareI2C
